@@ -55,5 +55,7 @@ public class R2Constants
   public static final int DEFAULT_DATA_CHUNK_SIZE = 8192;
   public static final boolean DEFAULT_REST_OVER_STREAM = false;
   public static final String RETRY_MESSAGE_ATTRIBUTE_KEY = "RETRY";
+  @Deprecated
   public static final String EXPECTED_SERVER_CERT_PRINCIPAL_NAME = "EXPECTED_SERVER_CERT_PRINCIPAL_NAME";
+  public static final String REQUESTED_SSL_SESSION_VALIDATOR = "REQUESTED_SSL_SESSION_VALIDATOR";
 }
